# chemistry-cafe

./: .env  .gitignore  .gitmodules  CITATION.cff  ChangeLog  LICENSE  ManualCoverageBackend.cobertura.xml  README.md  app.js  backend-test.sh  chemistry-cafe-nginx.conf  codecov.yml  docker-compose.production.yml  docker-compose.yml  index.html  init.sql  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
Backend/: .gitignore  CITATION.cff  Chemistry Cafe API.csproj  Chemistry Cafe API.http  Chemistry Cafe API.sln  Dockerfile  LICENSE  Program.cs  README.md  appsettings.json  chemistry-cafe-database.sql
TestResults/: ManualCoverageBackend.cobertura.xml  coverage-cobertura.xml  coverage.cobertura.xml  coverage.opencover.xml
backend/: .dockerignore  .gitignore  .runsettings  Chemistry Cafe API.csproj  Chemistry Cafe API.http  ChemistryCafeAPI.csproj  ChemistryCafeAPI.http  Dockerfile  Program.cs  README.md  appsettings.Development.json  appsettings.Production.json  appsettings.json
backend2/: .runsettings  package-lock.json  (+1 more)
php/test/: CMakeLists.txt  README.md
php/test/test_src/: TestCampCustomRates.sh  TestCampReactionArrhenius.php  TestCampReactionArrhenius.sh  TestCampReactionTernaryChemicalActivation.php  TestCampReactionTernaryChemicalActivation.sh  TestCampReactionTroe.php  TestCampReactionTroe.sh  TestCampReactionWennbergNoRo2.php  TestCampReactionWennbergTunneling.php  TestCampReactionWennbergTunneling.sh  TestCustomReaction.php  TestCustomReaction.sh  TestUtilities.php
php/test/test_src/CAM/: cam_module_stubs.F90  driver.F90
(+875 files in other folders)
